--- a/index.html
+++ b/index.html
@@ -1,19 +1,76 @@
+<!DOCTYPE html>
 <html>
-<HEAD><title>Todo App</title>
-<link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="style.css" type="text/css" MEDIA="screen" charset="utf-8">
-</HEAD>
-<body>
-<div class="aaa"><img src="./eisenhower-matrix.jpg"><a class='more_inf' href="https://goal-life.com/page/method/matrix-eisenhower">Want more details&quest;</a></div>
-<div class="centered-main-page-element"><p id='topSectionForAddingElementToList'><label for="new-task">Add Item</label><div class="task-row-wrapper"><input id='new-task'class="task" type="text"><button>Add</button></div>
-</p><h3>Todo</h3>
-<ul id='incompleteTasks'>
-<li><input type='checkbox'><label class="task">Pay Bills</label><input type="text" class="task"><button class="edit">Edit</button><button class="delete"><img src="./remove.svg"></button></li>
-<li class="editMode"><input type="checkbox"><label class="task">Go Shopping</label><input type="text" value="Go Shopping" class="task"><button class='edit'>Save</button><button class="delete"><img src="./remove.svg"></button></li>
-</ul><h3>Completed</h3><ul id="completed-tasks"><li><input type="checkbox" checked><label class="task">See the Doctor</label><input type="text" class="task"><button class="edit">Edit</button><button class="delete"><img src="./remove.svg"></button>
-</li>
-</ul>
-</div>
-<script type="text/javascript" SRC="app.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Clean Code - Task RS School by Roman Chuchev"
+    />
+
+    <title>Todo App</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+
+  <body>
+    <div class="hero">
+      <img src="./eisenhower-matrix.jpg" /><a
+        class="hero__more"
+        href="https://goal-life.com/page/method/matrix-eisenhower"
+        >Want more details?</a
+      >
+    </div>
+    <div class="container">
+      <section class="add">
+        <label class="add__label" for="add-task"><h3>Add Item</h3></label>
+        <div class="add__row">
+          <input id="input-task" class="add__task" type="text" />
+          <button id="add-task" class="btn">Add</button>
+        </div>
+      </section>
+      <section>
+        <h3>Todo</h3>
+        <ul id="unfinished">
+          <li>
+            <input type="checkbox" />
+            <label class="task">Pay Bills</label>
+            <input type="text" class="task" />
+            <button class="btn edit">Edit</button>
+            <button class="btn delete">
+              <img src="./remove.svg" alt="delete" />
+            </button>
+          </li>
+          <li class="editMode">
+            <input type="checkbox" />
+            <label class="task">Go Shopping</label>
+            <input type="text" value="Go Shopping" class="task" />
+            <button class="btn edit">Save</button>
+            <button class="btn delete">
+              <img src="./remove.svg" alt="delete" />
+            </button>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h3>Completed</h3>
+        <ul id="completed">
+          <li>
+            <input type="checkbox" checked />
+            <label class="task">See the Doctor</label>
+            <input type="text" class="task" />
+            <button class="btn edit">Edit</button>
+            <button class="btn delete">
+              <img src="./remove.svg" alt="delete" />
+            </button>
+          </li>
+        </ul>
+      </section>
+    </div>
+    <script defer src="app.js"></script>
+  </body>
 </html>
