feat: add padding

--- a/index.html
+++ b/index.html
@@ -19,12 +19,15 @@
 
   <body>
     <div class="hero">
-      <img src="./eisenhower-matrix.jpg" /><a
+      <img src="./eisenhower-matrix.jpg" />
+      <a
         class="hero__more"
         href="https://goal-life.com/page/method/matrix-eisenhower"
-        >Want more details?</a
       >
+        Want more details?
+      </a>
     </div>
+
     <div class="container">
       <section class="add">
         <label class="add__label" for="add-task"><h3>Add Item</h3></label>
@@ -33,6 +36,7 @@
           <button id="add-task" class="btn">Add</button>
         </div>
       </section>
+
       <section>
         <h3>Todo</h3>
         <ul id="unfinished">
@@ -56,6 +60,7 @@
           </li>
         </ul>
       </section>
+
       <section>
         <h3>Completed</h3>
         <ul id="completed">
@@ -71,6 +76,7 @@
         </ul>
       </section>
     </div>
+
     <script defer src="app.js"></script>
   </body>
 </html>
